[package]
name = "cargo-hot-reload"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
log = "0.4.14"
notify = "4.0.15"
pretty_env_logger = "0.4.0"
serde = "1.0.123"
serde_derive = "1.0.123"
toml = "0.5.8"

[build-dependencies]
cc = "1.0.67"
