[package]
name = "reloady-impl"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
unstub = []
enabled = []

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.9"