[package]
name = "reloady"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reloady-impl = { path = "../reloady-impl" }
lazy_static = { version = "1.4.0", optional = true }
symbolic = { version = "8.0.3", features = ["debuginfo"], optional = true }
rustc-demangle = { version = "0.1.18", optional = true }
libloading = { version = "0.7.0", optional = true }

[features]
unstub = ["reloady-impl/unstub", "lazy_static", "symbolic", "rustc-demangle", "libloading"]

[profile.dev]
opt-level = 3